--- a/posts/templates/posts/economic_calender.html
+++ b/posts/templates/posts/economic_calender.html
@@ -26,32 +26,32 @@
         <td>
             {% if query.stock == 'USD' %}
 
-            <img src="/static/posts/img/currencies/USD.png">
+            <img src="/static/posts/img/currencies/USD.png" class="currency-img">
 
 
             {% elif query.stock == 'EUR' %}
-            <img src="/static/posts/img/currencies/EUR.png">
+            <img src="/static/posts/img/currencies/EUR.png" class="currency-img">
 
             {% elif query.stock == 'CHF' %}
-            <img src="/static/posts/img/currencies/CHF.png">
+            <img src="/static/posts/img/currencies/CHF.png" class="currency-img">
 
             {% elif query.stock == 'CAD' %}
-            <img src="/static/posts/img/currencies/CAD.png">
+            <img src="/static/posts/img/currencies/CAD.png" class="currency-img">
 
             {% elif query.stock == 'AUD' %}
-            <img src="/static/posts/img/currencies/AUD.png">
+            <img src="/static/posts/img/currencies/AUD.png" class="currency-img">
 
             {% elif query.stock == 'JPY' %}
-            <img src="/static/posts/img/currencies/JPY.png">
+            <img src="/static/posts/img/currencies/JPY.png" class="currency-img">
 
             {% elif query.stock == 'BTC' %}
-            <img src="/static/posts/img/currencies/BTC.png">
+            <img src="/static/posts/img/currencies/BTC.png" class="currency-img">
 
             {% elif query.stock == 'NZD' %}
-            <img src="/static/posts/img/currencies/NZD.png">
+            <img src="/static/posts/img/currencies/NZD.png" class="currency-img">
 
             {% else %}
-            <img src="/static/posts/img/currencies/GBP.png">
+            <img src="/static/posts/img/currencies/GBP.png" class="currency-img">
 
 
             {% endif %}
