--- a/posts/static/posts/css/homepage.css
+++ b/posts/static/posts/css/homepage.css
@@ -141,6 +141,11 @@ border: 1px solid rgba(0, 0, 0, .09);
 font-size:15px;
 
 }
+#most-visited-img{
+width:100px;
+height:80px;
+
+}
 
 #left-side .most-seen-post{
 width:100%;
