min-height 1000px added to body

--- a/posts/templates/posts/calender.html
+++ b/posts/templates/posts/calender.html
@@ -29,7 +29,7 @@
 
                  <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>
 
-                <input id="input-picker" data-toggle="datepicker" type="text" class="form-control" >
+                <input id="input-picker" data-toggle="datepicker" type="text" class="form-control" placeholder="روی این قسمت کلیک کنید">
 
 
 
