--- a/posts/templates/posts/base.html
+++ b/posts/templates/posts/base.html
@@ -26,7 +26,7 @@
 
 
 <body>
-<div class="navbar navbar-fixed-top">
+<div class="navbar navbar-fixed-top" id="navbar-container">
     <nav class="navbar navbar-default" id="navbar1">
         <div class="container-fluid">
 
