--- a/posts/static/posts/css/homepage.css
+++ b/posts/static/posts/css/homepage.css
@@ -133,14 +133,40 @@ padding-left:0px;
 padding-top:0px;
 box-shadow: 0px 1px 4px #bbb;
 margin-top:20px;
-border-radius:0px;
-border: 1px solid rgba(0, 0, 0, .09);
+border-radius:4px;
+border: none;
+}
+
+#left-side .container{
+
+
+padding:0px;
+
 }
 
 #left-side .jumbotron p{
 font-size:15px;
 
 }
+
+#left-side #header {
+
+height:40px;
+background-color:#0066CC;
+border-top-right-radius:4px;
+border-top-left-radius:4px;
+
+}
+
+#left-side #header p{
+
+text-align:center;
+color:#fff;
+padding:9px 0px;
+height:22px;
+
+}
+
 #most-visited-img{
 width:100px;
 height:80px;
@@ -151,26 +177,32 @@ height:80px;
 width:100%;
 height:100%;
 overflow: hidden;
-padding:15px 10px;
+padding:15px 10px 0px 10px;
 border-bottom: 1px solid rgba(0, 0, 0, .09);}
 
 #left-side .most-seen-post .img-of-most-seen-post{
 
 float:right;
 width:20%;
-
+height:100%;
 }
 #left-side .most-seen-post .img-of-most-seen-post img{
 
-width:45px;
-height:45px;
+width:50px;
+height:50px;
 border-radius:100%;
 
 }
 #left-side .most-seen-post .header-of-most-seen-post{
 float:left;
 width:80%;
-height:45px;
+height:100%;
+
+}
+#left-side .most-seen-post .header-of-most-seen-post p{
+
+
+margin-bottom:0px;
 
 }
 
