--- a/posts/templates/posts/base.html
+++ b/posts/templates/posts/base.html
@@ -143,7 +143,7 @@
 
                                 </ul>
                             </li>
-                            <li><a href="{% url 'posts:articles' find='domestic_dollar' %} ">دلار داخلی</a></li>
+                            <li><a href="{% url 'posts:articles' find='domestic-dollar' %} ">دلار داخلی</a></li>
 
 
                         </ul>
