footer problem with scroll fixed and contact-us link fixed and footer position changed

--- a/posts/static/posts/css/base.css
+++ b/posts/static/posts/css/base.css
@@ -331,7 +331,7 @@ border-radius:0px;
 #SideNav{
 
 font-family:'Far.Adab',Tahoma, Sans-Serif;
-position: fixed;
+position: relative;
 float:right;
 width:250px;
 z-index: 1;
@@ -619,9 +619,8 @@ padding:20px;
 }
                             /*        footer setting started                */
 footer{
-position:absolute;
-left:0px;
-right:0px;
+position:relative;
+
 font-family:'Far.Adab',Tahoma, Sans-Serif;
 
 background-color:#232531;
