--- a/users/static/users/css/GuestContact.css
+++ b/users/static/users/css/GuestContact.css
@@ -39,7 +39,7 @@ padding-bottom:15px;
 border-bottom:2px solid #fff;
 
 }
-#contact-content .container-fluid p,a{
+#contact-content .container-fluid p,#contact-content .container-fluid a{
 
 font-size:16px;
 
