--- a/posts/templates/posts/homepage.html
+++ b/posts/templates/posts/homepage.html
@@ -100,7 +100,7 @@
 
 
 
-<i class="fa fa-spinner fa-pulse fa-3x fa-fw"></i>
+<i class="fa fa-spinner fa-pulse fa-3x fa-fw" style="color:#ffd84a;"></i>
 <span class="sr-only">Loading...</span>
   </div>
                 {% endblock %}
