--- a/specificpages/templates/specificpages/about-us.html
+++ b/specificpages/templates/specificpages/about-us.html
@@ -138,7 +138,7 @@
     <p> این شرکت دارای بخش ها و واحدهای مختلفی است که در ادامه از نظرتان می گذرد.</p>
 
         <ol>
-            <li><span class="list-heading">چشم انداز روزانه</span>
+            <li><span class="heading">چشم انداز روزانه</span>
                 <p>در حالی که معامله گران بازار سرمایه به ویژه حرفه ای ها به طور معمول از اتفاقات و رخدادهای مهم بازار
                     سرمایه مطلع هستند. پایگاه اطلاع رسانی و تحلیلی مشاور سرمایه گذاری نوسان گلد مطلبی با همان ساختار اما
                     با
@@ -149,7 +149,7 @@
                     خبره
                     انجام می شود، به طور معمول پیش بینی های تکنیکی و بنیادی آن محقق می شود.</p>
             </li>
-            <li><span class="list-heading">اخبار داغ</span>
+            <li><span class="heading">اخبار داغ</span>
                 <p>در بازار سرمایه همواره خبر نقش بسیار موثر و تعیین کننده ای در موفقیت معامله گران داشته است. در این
                     بازار
                     پر فراز و نشیب بارها دیده اید که دریافت یک خبر از سوی یک معامله گر تا چه میزان توانسته موجب شود تا
@@ -177,7 +177,7 @@
                 <p>از سویی دیگر، معتبر بودن این خبرها که به طور معمول در قالب مصاحبه های خبری با مدیران شرکت ها انجام می
                     شود.</p>
             </li>
-            <li><span class="list-heading">دیدگاه</span>
+            <li><span class="heading">دیدگاه</span>
                 <p>بازار سرمایه همواره در طول بیش از 9 دهه از فعالیت خود از دیدگاه های کارشناسی، نقدهای منصفانه و نظرات
                     مدیران و کارشناسان بهره مند شده است. مشاور سرمایه گذاری ایرانیان تحلیل فارابی هم با هدف انتشار نقطه
                     نظرات و دیدگاه های همه فعالان و کارشناس و مدیران بازار سرمایه مدتی است که بخشی را تحت عنوان دیدگاه
@@ -185,7 +185,7 @@
                     اندازی کرده تا به این ترتیب تمام کارشناسان و صاحب نظران در تریبونی آزاد بتوانند نظرات خود را در خصوص
                     موارد مختلف بیان کنند.</p>
                 <p>بدیهی است، این بخش به طور معمول برای تمامی کاربران سایت قابل دسترسی است.</p></li>
-            <li><span class="list-heading">سیگنال آنلاین و تحلیل های تکنیکی</span>
+            <li><span class="heading">سیگنال آنلاین و تحلیل های تکنیکی</span>
                 <p>بدون شک علم تکنیکال یکی از رموز موفقیت در بازار سرمایه محسوب می شود و هستند تکنیکالیست های موفقی که
                     در
                     بورس های بین المللی با استفاده از همین تحلیل ها که در قالب نمودار در صفحه مانیتور ظاهر می شود، به
@@ -195,7 +195,7 @@
                     طور
                     متوسط 5 تحلیل تکنیکال جامع و اجمالی در مورد نمادهای مورد توجه بازار روی خروجی سایت قرار می گیرد.</p>
             </li>
-            <li><span class="list-heading">تحلیل بنیادی</span>
+            <li><span class="heading">تحلیل بنیادی</span>
                 <p>تحلیل فاندامنتال و یا به تعبیری واضح تر تحلیل بنیادی که بر اساس واقعیت های حاکم بر سیاست ها شکل می
                     گیرد،
                     همواره توانسته دید مناسبی به سرمایه گذاران در خصوص صنایع و یا کشور ها و سیساست های مالی مختلف
@@ -210,7 +210,7 @@
 
 
             </li>
-            <li><span class="list-heading">آموزش</span>
+            <li><span class="heading">آموزش</span>
                 <p>مشاوره سرمایه گذاری نوسان گلد هر چند در حال راه اندازی دپارتمان آموزشی برای ارائه خدمات حضوری است،
                     اما از
                     مدت ها قبل آموزش به افراد حرفه ای و حتی غیرحرفه ای را در فضای مجازی در دستور کار خود قرار داده است،
@@ -227,11 +227,11 @@
                     خروجی
                     خود قرار می دهد.</p>
             </li>
-            <li><span class="list-heading">اخبار اقتصادی- بورسی و گوناگون</span><p>این که فعالان بازار سرمایه و معامله گران زمان کافی برای مراجعه به سایت های غیر مربوط با حوزه بورس و بازار را ندارند، امری بدیهی است.
+            <li><span class="heading">اخبار اقتصادی- بورسی و گوناگون</span><p>این که فعالان بازار سرمایه و معامله گران زمان کافی برای مراجعه به سایت های غیر مربوط با حوزه بورس و بازار را ندارند، امری بدیهی است.
 
 مشاور سرمایه گذاری نوسان گلد نیز با درک این موضوع در کنار تمام خدمات ویژه ای که به کاربران خود می دهد روزانه بیش از 60 خبر اقتصادی ، بورسی و گوناگون را پس ازدروازه بانی صورت گرفته و ویرایش محتوایی روی خروجی خود قرار می دهد.</p></li>
-            <li><span class="list-heading">سالنامه تخصصی بازار سرمایه</span><p>از آن جا که طی 5 سال گذشته سالنامه تخصصی بازار سرمایه مورد استقبال فعالان بازار سرمایه قرار گرفته و به لحاظ محتوای ارزشمند آن متقاضیان بالقوه زیادی برای آن وجود دارد، برنامه نوسان گلد تقویت محتوای این سالنامه است، تا در کنار ارائه سالنامه ای با محتوای غنی تر به لحاظ ظاهری هم سررسیدی نفیس تقدیم فعالان محترم بازار سرمایه گردد. این سالنامه تخصصی در ماه پایانی سال آماده ارائه به فعالان بازار  است.</p></li>
-            <li><span class="list-heading">پیامک های لحظه ای</span>
+            <li><span class="heading">سالنامه تخصصی بازار سرمایه</span><p>از آن جا که طی 5 سال گذشته سالنامه تخصصی بازار سرمایه مورد استقبال فعالان بازار سرمایه قرار گرفته و به لحاظ محتوای ارزشمند آن متقاضیان بالقوه زیادی برای آن وجود دارد، برنامه نوسان گلد تقویت محتوای این سالنامه است، تا در کنار ارائه سالنامه ای با محتوای غنی تر به لحاظ ظاهری هم سررسیدی نفیس تقدیم فعالان محترم بازار سرمایه گردد. این سالنامه تخصصی در ماه پایانی سال آماده ارائه به فعالان بازار  است.</p></li>
+            <li><span class="heading">پیامک های لحظه ای</span>
                 <p>پایگاه اطلاع رسانی و تحلیلی مشاور سرمایه گزاری نوسان کلد دارای حدود 1000 کاربر ویژه است که این
                     کاربران
                     روزانه پیامک های لحظه ای خبری را در طول روز به ویژه در ساعت معاملات بازار دریافت می کنند.</p>
@@ -250,7 +250,7 @@
                     شریط بازار سرمایه و وجود اخبار موثق و قابل پیگیری
                 </p></li>
 
-            <li><span class="list-heading"> سالنامه تخصصی بازار سرمایه</span><p>
+            <li><span class="heading"> سالنامه تخصصی بازار سرمایه</span><p>
                 از آن جا که طی 5 سال گذشته سالنامه تخصصی بازار سرمایه مورد استقبال فعالان بازار سرمایه قرار گرفته و به
                 لحاظ
                 محتوای ارزشمند آن متقاضیان بالقوه زیادی برای آن وجود دارد، برنامه نوسان گلد تقویت محتوای این سالنامه
@@ -258,7 +258,7 @@
                 در کنار ارائه سالنامه ای با محتوای غنی تر به لحاظ ظاهری هم سررسیدی نفیس تقدیم فعالان محترم بازار سرمایه
                 گردد. این سالنامه تخصصی در ماه پایانی سال آماده ارائه به فعالان بازار است.
             </p></li>
-            <li><span class="list-heading">بولتن های تخصصی</span><p>با توجه به عضویت بیش از 1000 کاربر ویژه در پایگاه اطلاع
+            <li><span class="heading">بولتن های تخصصی</span><p>با توجه به عضویت بیش از 1000 کاربر ویژه در پایگاه اطلاع
                 رسانی و تحلیلی مشاور سرمایه گذاری نوسان گلد ،برنامه شرکت انتشار بولتن تخصصی برای این افراد است. هم اکنون
                 یک
                 تیم کارشناسی در حالی بررسی چگونگی انتشار بولتنی کاربردی برای کاربران و فعالان بازار سرمایه است که ضمن
