--- a/users/templates/users/reg_form.html
+++ b/users/templates/users/reg_form.html
@@ -107,9 +107,10 @@
                 <select name="city" class="form-control" required id="id_city">
                     <option value="">---------</option>
 
-                    <option value="آذربایجان غربی">آذربایجان غربی</option>
+                    <option value="آذربایجان_شرقی">آذربایجان شرقی</option>
 
-                    <option value="آذربایجان شرقی">آذربایجان شرقی</option>
+                    <option value="آذربایجان_غربی">آذربایجان غربی</option>
+
 
                     <option value="اصفهان">اصفهان</option>
 
@@ -121,19 +122,19 @@
 
                     <option value="تهران">تهران</option>
 
-                    <option value="چهارمحال و بختیاری">چهارمحال_و_بختیاری</option>
+                    <option value="چهارمحال_و_بختیاری">چهارمحال_و_بختیاری</option>
 
-                    <option value="خراسان جنوبی">خراسان_جنوبی</option>
+                    <option value="خراسان_جنوبی">خراسان_جنوبی</option>
 
-                    <option value="خراسان رضوی">خراسان_رضوی</option>
+                    <option value="خراسان_رضوی">خراسان_رضوی</option>
 
-                    <option value="خراسان شمالی">خراسان_شمالی</option>
+                    <option value="خراسان_شمالی">خراسان_شمالی</option>
 
                     <option value="خوزستان">خوزستان</option>
 
                     <option value="زنجان">زنجان</option>
 
-                    <option value="سیستان و بلوچستان">سیستان_و_بلوچستان</option>
+                    <option value="سیستان_و_بلوچستان">سیستان_و_بلوچستان</option>
 
                     <option value="سمنان">سمنان</option>
 
@@ -143,7 +144,7 @@
 
                     <option value="قزوین">قزوین</option>
 
-                    <option value="کهکیلویه و بویراحمد">کهکیلویه_و_بویراحمد</option>
+                    <option value="کهکیلویه_و_بویراحمد">کهکیلویه_و_بویراحمد</option>
 
                     <option value="کردستان">کردستان</option>
 
