--- a/posts/templates/posts/base.html
+++ b/posts/templates/posts/base.html
@@ -26,12 +26,13 @@
 
 
 <body>
-<div class="navbar navbar-fixed-top" id="navbar-container">
+<div class="navbar navbar-fixed-top" id="navbar-container" >
     <nav class="navbar navbar-default" id="navbar1">
         <div class="container-fluid">
 
-            <button type="button" id="left-side-toggle-open"
-            >&#9776;
+            <button type="button" id="left-side-toggle-open">
+<img src="{% static 'posts/img/user.png' %}" />
+
             </button>
             <button type="button" id="left-side-toggle-close">
 
