--- a/users/templates/users/reg_form.html
+++ b/users/templates/users/reg_form.html
@@ -122,19 +122,19 @@
 
                     <option value="تهران">تهران</option>
 
-                    <option value="چهارمحال_و_بختیاری">چهارمحال_و_بختیاری</option>
+                    <option value="چهارمحال_و_بختیاری">چهارمحال و بختیاری</option>
 
-                    <option value="خراسان_جنوبی">خراسان_جنوبی</option>
+                    <option value="خراسان_جنوبی">خراسان جنوبی</option>
 
-                    <option value="خراسان_رضوی">خراسان_رضوی</option>
+                    <option value="خراسان_رضوی">خراسان رضوی</option>
 
-                    <option value="خراسان_شمالی">خراسان_شمالی</option>
+                    <option value="خراسان_شمالی">خراسان شمالی</option>
 
                     <option value="خوزستان">خوزستان</option>
 
                     <option value="زنجان">زنجان</option>
 
-                    <option value="سیستان_و_بلوچستان">سیستان_و_بلوچستان</option>
+                    <option value="سیستان_و_بلوچستان">سیستان و بلوچستان</option>
 
                     <option value="سمنان">سمنان</option>
 
@@ -144,7 +144,7 @@
 
                     <option value="قزوین">قزوین</option>
 
-                    <option value="کهکیلویه_و_بویراحمد">کهکیلویه_و_بویراحمد</option>
+                    <option value="کهکیلویه_و_بویراحمد">کهکیلویه و بویراحمد</option>
 
                     <option value="کردستان">کردستان</option>
 
