big change: slides added telegram banner added signal model added signal page created pamm page edited recommended system edited register link added to login page tariffs page edited

--- a/posts/templates/posts/base.html
+++ b/posts/templates/posts/base.html
@@ -200,6 +200,8 @@
 
 <p class="navbar-text navbar-right"><a href="/bankorders/" class="navbar-link">اوردر بانک</a>
                 </p>
+                                <p class="navbar-text navbar-right"><a href="/signals/" class="navbar-link">سیگنال ها</a>
+
 
             </div>
 
