--- a/specificpages/templates/specificpages/pamm.html
+++ b/specificpages/templates/specificpages/pamm.html
@@ -20,6 +20,9 @@
 {% block body %}
 
 <div class="container-fluid specificpage-container">
+        <div class="text-center">
+        <img src="{% static 'specificpages/img/pamm-page.png' %}" style="padding-bottom:20px;">
+</div>
 <p>از برنامه سرمایه‌گذاری در بروکر FXTM ما استفاده کنید و با پیروی ازمعاملات برترین معامله‌کنندگان، سرمایه خود را در نقدشونده‌ترین بازار جهان افزایش دهید.</p>
 
     <ul>
@@ -32,6 +35,9 @@
     </ul>
     <span>برای ثبت نام در کارگزاری FXTM وارد لینک زیر شوید:</span>
     <a href="https://www.forextime.com/?partner_id=4913110">https://www.forextime.com/?partner_id=4913110</a>
+
+     <br><span>برای وصل شدن به حساب سرمایه گزاری ما از طریق لینک زیر اقدام کنید:</span>
+     <br><a href="https://www.forextime.com/fa/strategy/NAVASANGOLD1">https://www.forextime.com/fa/strategy/NAVASANGOLD1</a>
 </div>
 
 {% endblock %}
