--- a/posts/static/posts/css/homepage.css
+++ b/posts/static/posts/css/homepage.css
@@ -32,7 +32,6 @@ padding-right:0px;
 background-color:#fff;
 margin:0;
 margin-top:20px;
-box-shadow: 0px 1px 4px #bbb;
 border: 1px solid rgba(0, 0, 0, .09);
 padding:0px;
 
@@ -131,6 +130,7 @@ background-color:#fff;
 padding-right:0px;
 padding-left:0px;
 padding-top:0px;
+padding-bottom:0px;
 box-shadow: 0px 1px 4px #bbb;
 margin-top:20px;
 border-radius:4px;
@@ -172,12 +172,17 @@ width:100px;
 height:80px;
 
 }
+#most-seen{
+
+max-width:399px;
+}
 
 #left-side .most-seen-post{
 width:100%;
 height:100%;
 overflow: hidden;
 padding:15px 10px 0px 10px;
+
 border-bottom: 1px solid rgba(0, 0, 0, .09);}
 
 #left-side .most-seen-post .img-of-most-seen-post{
@@ -239,3 +244,26 @@ margin:10px auto;
 }
 
 }
+
+
+
+.carousel .item img {
+
+max-height:400px;
+max-width:615px;
+margin:0px auto;
+margin-top:20px;
+}
+.carousel-control.left, .carousel-control.right {
+   background-image:none !important;
+   filter:none !important;
+}
+.carousel-indicators .active{
+
+
+background-color:#0066CC;
+
+}
+
+
+
