--- a/posts/templates/posts/homepage.html
+++ b/posts/templates/posts/homepage.html
@@ -30,6 +30,45 @@
         <div class="col-xs-12 col-sm-8 col-md-8" id="right-side" style="float:right;">
 
             <div class="jumbotron">
+                <div id="myCarousel" class="carousel slide " data-ride="carousel" dir="ltr">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+    </ol>
+
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner">
+      <div class="item active">
+        <img src="{% static 'posts/img/slide1.png' %}" alt="slide1" style="width:100%;">
+      </div>
+
+      <div class="item">
+        <img src="{% static 'posts/img/slide2.png' %}" alt="slide2" style="width:100%;">
+      </div>
+
+      <div class="item" >
+
+           <img src="{% static 'posts/img/slide3.png' %}"  alt="slide3"  style="width:100%;">
+ <div class="carousel-caption">
+                    <a href="/about-us" style="font-size:25px;color:#b3b3b3;text-shadow:none;font-weight:700;"> کلیک کنید تا با ما بیشتر آشنا شوید</a>
+                </div>
+
+      </div>
+    </div>
+
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+
 
                 <div class="post infinite-container">
                     {% for post in posts %}
@@ -100,7 +139,7 @@
 
 
 
-<i class="fa fa-spinner fa-pulse fa-3x fa-fw" style="color:#ffd84a;"></i>
+<i class="fa fa-spinner fa-pulse fa-3x fa-fw" style="color:#0066CC;"></i>
 <span class="sr-only">Loading...</span>
   </div>
                 {% endblock %}
@@ -113,7 +152,7 @@
 
             </div>
         </div>
-    </div>
+</div>
 
 
     <div class="hidden-xs col-sm-4 col-md-4" style="float:left; " id="left-side">
@@ -145,6 +184,11 @@
 
 
                 </div>
+                <a href="https://t.me/signal_navasan">
+                    <div style="max-width:399px;">
+                    <img src="{% static 'posts/img/telegram-banner.png' %}"  class="img-responsive" >
+                </div>
+                </a>
 
 
             </div>
@@ -152,8 +196,7 @@
         </div>
 
     </div>
-</div>
-
+    </div>
 {% endblock %}
 
 {% block script %}
@@ -171,4 +214,7 @@
       }
     });
   </script>
+<!--
+<script src="{% static 'posts/js/homepage.js' %}"></script>
+-->
 {% endblock %}
