--- a/specificpages/templates/specificpages/tariffs.html
+++ b/specificpages/templates/specificpages/tariffs.html
@@ -12,6 +12,9 @@
 <link rel="stylesheet" type="text/css" href="{% static 'specificpages/css/tariffs.css' %}"/>
 {% endblock %}
 
+
+/user/login/?next=/tariffs/
+
 {% block title %}
 <title>مشاهده تعرفه ها</title>
 {% endblock %}
@@ -28,45 +31,56 @@
 <p>همچنین ما تحلیل های داخلی دلار و سیگنال های مطمئن خرید و فروش را در اختیار شما قرار میدهیم.</p>
         <p>یکی دیگر از مزیت های خرید اشتراک ،مشاهده اوردر بانک ها هستش که بکمک آن میتوانید بفهمید بانک ها چه استراتژی ها و پوزیشن هایی را دنبال میکنند. </p>
         <p>ما با این امکانات نوسان گلد را سایتی تخصصی میکنیم.شما هم میتوانید با نوسان گلد تخصصی کار کنید.</p>
+{% if not user.is_authenticated %}
+        <p>برای مشاهده ی لینک خرید ابتدا وارد<a href="/user/login/?next=/tariffs/"> وارد </a>سایت شوید.</p>
+    {% endif %}
     </div>
 <div class="tariffs tariffs-1">
     <img src="{% static 'specificpages/img/tariffs/tariff1.png' %}" class="tariffs-img" alt="tariffs-img-1">
     <div class="description">
     <p>  اشتراک  ۱ ماهه نوسان گلد برای دسترسی به تحلیل ها و اوردر بانک ها.</p>
-        <span>۱۳۰۰۰۰تومان</span>
+        <span>۱۳۰,۰۰۰تومان</span>
+        {% if user.is_authenticated %}
     <a class="btn btn-default btn-md link-to-bank" href="{% url 'user:send_to_zarinpal' tariff_number=1 %}">
 خرید
     </a>
+        {% endif %}
         </div>
 </div>
     <div class="tariffs tariffs-2">
     <img src="{% static 'specificpages/img/tariffs/tariff3.png' %}" class="tariffs-img img-responsive" alt="tariffs-img-2">
     <div class="description">
     <p>  اشتراک  ۳ ماهه نوسان گلد برای دسترسی به تحلیل ها و اوردر بانک ها.</p>
-        <span>۲۸۰۰۰۰تومان</span>
+        <span>۲۸۰,۰۰۰تومان</span>
+               {% if user.is_authenticated %}
     <a class="btn btn-default btn-md link-to-bank" href="{% url 'user:send_to_zarinpal' tariff_number=2 %}">
 خرید
     </a>
+               {% endif %}
         </div>
 </div>
     <div class="tariffs tariffs-3">
     <img src="{% static 'specificpages/img/tariffs/tariff6.png' %}" class="tariffs-img" alt="tariffs-img-3">
     <div class="description">
    <p>  اشتراک  ۶ ماهه نوسان گلد برای دسترسی به تحلیل ها و اوردر بانک ها.</p>
-        <span>۵۳۰۰۰۰تومان</span>
+        <span>۵۳۰,۰۰۰تومان</span>
+               {% if user.is_authenticated %}
     <a class="btn btn-default btn-md link-to-bank" href="{% url 'user:send_to_zarinpal' tariff_number=3 %}">
 خرید
     </a>
+        {% endif %}
         </div>
 </div>
     <div class="tariffs tariffs-4">
     <img src="{% static 'specificpages/img/tariffs/tariff12.png' %}" class="tariffs-img" alt="tariffs-img-4">
     <div class="description">
     <p>  اشتراک ۱۲ ماهه نوسان گلد برای دسترسی به تحلیل ها و اوردر بانک ها.</p>
-        <span>۹۸۰۰۰۰تومان</span>
+        <span>۹۸۰,۰۰۰تومان</span>
+               {% if user.is_authenticated %}
     <a class="btn btn-default btn-md link-to-bank" href="{% url 'user:send_to_zarinpal' tariff_number=4 %}">
 خرید
     </a>
+        {% endif %}
         </div>
 </div>
     </div>
