carousel removed from category

--- a/posts/templates/posts/category.html
+++ b/posts/templates/posts/category.html
@@ -11,6 +11,10 @@
 {% block title %}
 <title>{{ tag }}</title>
 {% endblock %}
+
+{% block carousel %}
+{% endblock %}
+
   {% if posts.has_other_pages %}
 {% block pagination %}
  <div class="pagination-panel">
