vip email edited

--- a/users/templates/users/vip_email.html
+++ b/users/templates/users/vip_email.html
@@ -16,5 +16,6 @@
     <p>اشتراک 6ماهه برای شما فعال شد .</p>
     {% else %}
     <p>اشتراک 12ماهه برای شما فعال شد .</p>
+{% endif %}
 </body>
 </html>
