--- a/users/templates/users/register_email.html
+++ b/users/templates/users/register_email.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="rtl">
 <head>
     <meta charset="UTF-8">
+    <style>
+        body{
+        font-family:'Arial Unicode MS';
+        text-align:center;
+        }
+        div{
+        padding:10px;
+        margin:auto auto;
+        border:5px solid #5aabe6;border-radius:5px;
+        }
+        a{
+        text-decoration:none;
+        }
+    </style>
 </head>
 <body>
-
-<p>با سلام و درود شما با نام کاربری {{username}} در سایت نوسان گلد تبریک شدید.</p>
-<p>یک هفته اشتراک رایگان برای شما فعال شد.</p>
-
+<div >
+<p>با سلام و درود شما با نام کاربری {{username}} در سایت نوسان گلد ثبت نام شدید.</p>
+<p>یک هفته اشتراک رایگان برای شما فعال شد😍</p>
+    <p>شما میتوانید انتقادات و پیشنهاداتتون رو در صفحه ی <a href="https://navasangold.com/contact-us" style="text-decoration:none;">تماس با ما </a> یا در تلگرام ما به آیدی <a href="https://t.me/joinchat/AAAAAECJCZAcoaRiLNAxKg"> https://t.me/joinchat/AAAAAECJCZAcoaRiLNAxKg </a>بیان کنید.  </p>
+    <a href="https://navasangold.com" >نوسان گلد</a>
+</div>
 </body>
 </html>
