register-email changed

--- a/users/templates/users/vip_email.html
+++ b/users/templates/users/vip_email.html
@@ -9,13 +9,13 @@
 <p>پرداخت شما با موفقیت انجام شد .</p>
     <p>شماره تراکنش:{{transaction_number}}</p>
    {% if tariffs_number == '1' %}
-    <p>اشتراک 1ماهه برای شما فعال شد 😍</p>
+    <p>اشتراک 1ماهه برای شما فعال شد </p>
     {% elif tariffs_number == '2' %}
-    <p>اشتراک 3ماهه برای شما فعال شد 😍</p>
+    <p>اشتراک 3ماهه برای شما فعال شد </p>
     {% elif tariffs_number == '3' %}
     <p>اشتراک 6ماهه برای شما فعال شد </p>
     {% else %}
-    <p>اشتراک 12ماهه برای شما فعال شد 😎</p>
+    <p>اشتراک 12ماهه برای شما فعال شد </p>
 {% endif %}
 
 </body>
