--- a/users/templates/users/register_email.html
+++ b/users/templates/users/register_email.html
@@ -6,11 +6,13 @@
         body{
         font-family:'Arial Unicode MS';
         text-align:center;
+        direction:rtl;
         }
         div{
         padding:10px;
         margin:auto auto;
-        border:5px solid #5aabe6;border-radius:5px;
+        border:5px solid #5aabe6;
+        border-radius:5px;
         }
         a{
         text-decoration:none;
@@ -21,7 +23,7 @@
 <div >
 <p>با سلام و درود شما با نام کاربری {{username}} در سایت نوسان گلد ثبت نام شدید.</p>
 <p>یک هفته اشتراک رایگان برای شما فعال شد😍</p>
-    <p>شما میتوانید انتقادات و پیشنهاداتتون رو در صفحه ی <a href="https://navasangold.com/contact-us" style="text-decoration:none;">تماس با ما </a> یا در تلگرام ما به آیدی <a href="https://t.me/joinchat/AAAAAECJCZAcoaRiLNAxKg"> https://t.me/joinchat/AAAAAECJCZAcoaRiLNAxKg </a>بیان کنید.  </p>
+    <p>شما میتوانید انتقادات و پیشنهاداتتون رو در صفحه ی <a href="https://navasangold.com/contact-us" >تماس با ما </a> یا در تلگرام ما به آیدی <a href="https://t.me/joinchat/AAAAAECJCZAcoaRiLNAxKg"> https://t.me/joinchat/AAAAAECJCZAcoaRiLNAxKg </a>بیان کنید.  </p>
     <a href="https://navasangold.com" >نوسان گلد</a>
 </div>
 </body>
