register-email changed

--- a/users/templates/users/register_email.html
+++ b/users/templates/users/register_email.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
-<html lang="en" dir="rtl">
+<html lang="en" >
 <head>
     <meta charset="UTF-8">
     <style>
         body{
         font-family:'Arial Unicode MS';
-        text-align:center;
-        direction:rtl;
+        text-align:right;
         }
         div{
         padding:10px;
-        margin:auto auto;
-        border:5px solid #5aabe6;
-        border-radius:5px;
+
+
         }
         a{
         text-decoration:none;
