--- a/users/templates/users/register_email.html
+++ b/users/templates/users/register_email.html
@@ -5,7 +5,7 @@
     <style>
         body{
         font-family:'Arial Unicode MS';
-        text-align:right;
+
         }
         div{
         padding:10px;
@@ -17,8 +17,8 @@
         }
     </style>
 </head>
-<body>
-<div >
+<body dir="rtl">
+<div style="text-align:right;">
 <p>با سلام و درود شما با نام کاربری {{username}} در سایت نوسان گلد ثبت نام شدید.</p>
 <p>یک هفته اشتراک رایگان برای شما فعال شد😍</p>
     <p>شما میتوانید انتقادات و پیشنهاداتتون رو در صفحه ی <a href="https://navasangold.com/contact-us" >تماس با ما </a> یا در تلگرام ما به آیدی <a href="https://t.me/joinchat/AAAAAECJCZAcoaRiLNAxKg"> https://t.me/joinchat/AAAAAECJCZAcoaRiLNAxKg </a>بیان کنید.  </p>
