--- a/users/static/users/css/reg-form.css
+++ b/users/static/users/css/reg-form.css
@@ -7,11 +7,11 @@ margin-right:200px;
 #main{
 
 background: url("../img/wallstreet.jpg") no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-
+-webkit-background-size: cover;
+-moz-background-size: cover;
+-o-background-size: cover;
+background-size: cover;
+margin-top:0px;
 }
 
 
