--- a/users/templates/users/register_email.html
+++ b/users/templates/users/register_email.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <style>
         body{
-        font-family:'Arial Unicode MS';
 
+        font-size:20px;
         }
         div{
         padding:10px;
@@ -19,9 +19,9 @@
 </head>
 <body dir="rtl">
 <div style="text-align:right;">
-<p>با سلام و درود شما با نام کاربری {{username}} در سایت نوسان گلد ثبت نام شدید.</p>
+<p>با سلام و درود، شما با نام کاربری {{username}} در سایت نوسان گلد ثبت نام شدید.</p>
 <p>یک هفته اشتراک رایگان برای شما فعال شد😍</p>
-    <p>شما میتوانید انتقادات و پیشنهاداتتون رو در صفحه ی <a href="https://navasangold.com/contact-us" >تماس با ما </a> یا در تلگرام ما به آیدی <a href="https://t.me/joinchat/AAAAAECJCZAcoaRiLNAxKg"> https://t.me/joinchat/AAAAAECJCZAcoaRiLNAxKg </a>بیان کنید.  </p>
+    <p>شما میتوانید انتقادات و پیشنهاداتتون رو در صفحه ی <a href="https://navasangold.com/contact-us" >تماس با ما </a> یا در تلگرام ما به آیدی <a href="https://t.me/joinchat/AAAAAECJCZAcoaRiLNAxKg"> https://t.me/joinchat/AAAAAECJCZAcoaRiLNAxKg </a>به ما ارسال کنید.</p>
     <a href="https://navasangold.com" >نوسان گلد</a>
 </div>
 </body>
