vip-email changed

--- a/users/templates/users/vip_email.html
+++ b/users/templates/users/vip_email.html
@@ -31,6 +31,7 @@
     {% else %}
     <p>اشتراک ۱۲ ماهه برای شما فعال گردید. </p>
 {% endif %}
+    <p>هم اکنون شما به بخش های  تحلیل های ویژه،اوردر بانک هاو سیگنال ها دسترسی دارید. </p>
     <a href="https://navasangold.com" >نوسان گلد</a>
 </div>
 </body>
