--- a/users/templates/users/vip_email.html
+++ b/users/templates/users/vip_email.html
@@ -9,6 +9,7 @@
 
 
         }
+
         a{
         text-decoration:none;
         }
@@ -17,18 +18,18 @@
 <body dir="rtl">
 <div>
  <h1 >سلام {{username}}</h1>
-<p style="color:#000;font-size:18px;">پرداخت شما با موفقیت انجام شد .</p>
-    <p style="font-size:18px;">شماره تراکنش:{{transaction_number}}</p>
+<p style="font-size:18px;color:#000;">پرداخت شما با موفقیت انجام شد .</p>
+    <p style="font-size:18px;color:#000;">شماره تراکنش:{{transaction_number}}</p>
    {% if tariffs_number == '1' %}
-    <p style="font-size:18px;">اشتراک ۱ ماهه برای شما فعال گردید. </p>
+    <p style="font-size:18px;color:#000;">اشتراک ۱ ماهه برای شما فعال گردید. </p>
     {% elif tariffs_number == '2' %}
-    <p style="font-size:18px;">اشتراک ۳ ماهه برای شما فعال گردید. </p>
+    <p style="font-size:18px;color:#000;">اشتراک ۳ ماهه برای شما فعال گردید. </p>
     {% elif tariffs_number == '3' %}
-    <p style="font-size:18px;">اشتراک ۶ ماهه برای شما فعال گردید. </p>
+    <p style="font-size:18px;color:#000;">اشتراک ۶ ماهه برای شما فعال گردید. </p>
     {% else %}
-    <p style="font-size:18px;">اشتراک ۱۲ ماهه برای شما فعال گردید. </p>
+    <p style="font-size:18px;color:#000;">اشتراک ۱۲ ماهه برای شما فعال گردید. </p>
 {% endif %}
-    <p style="font-size:18px;">هم اکنون شما به بخش های <b>تحلیل ویژه</b>، <b>اوردر بانک ها </b>و <b>  سیگنال ها</b> دسترسی دارید. </p>
+    <p style="font-size:18px;color:#000;">هم اکنون شما به بخش های <b>تحلیل ویژه</b>، <b>اوردر بانک ها </b>و <b>  سیگنال ها</b> دسترسی دارید. </p>
     <a href="https://navasangold.com" style="font-size:18px;">نوسان گلد</a>
 </div>
 </body>
